# dzmo

./: .env.example  .gitignore  Procfile  README.md  config.example.json  manage.py  pbs.csv  pyproject.toml  pyvenv.cfg  requirements.txt
.github/workflows/: deploy.yml
Scripts/: activate  activate.bat  activate.fish  activate.xsh  django-admin.py  jp.py
accounts/: admin.py  apps.py  decorators.py  forms.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_studentprogress.py  0003_auto_20201225_2253.py  0004_auto_20210101_1831.py  0005_user_is_corrector.py  0006_auto_20210102_2249.py  0007_auto_20210803_2345.py  0007_team.py  0008_auto_20210807_1113.py  0008_auto_20210808_0724.py  0008_auto_20210808_0748.py  0008_auto_20210808_0757.py  0008_auto_20210808_0806.py  0008_auto_20210809_1439.py  0009_studentprogress_last_tasks_subs.py  0010_corrector.py  0011_remove_studentprogress_solved_problems.py  0012_user_completed_chapters_user_last_submissions_and_more.py
control/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
control/migrations/: 0001_initial.py  0002_mainpagepost_public.py  0003_correctorsnotif.py  0004_auto_20210818_1019.py  0005_delete_submissions.py
dzmo/: asgi.py  settings.py  urls.py  wsgi.py
lessons/: admin.py  apps.py  models.py  urls.py  views.py
lessons/migrations/: 0001_initial.py  0002_auto_20210101_1831.py  0003_auto_20210102_2249.py  0004_alter_chapter_topic.py  0005_delete_prereqchapter_rename_prereq.py
problems/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
problems/migrations/: 0001_initial.py  0002_auto_20201225_2253.py  0003_auto_20210101_1831.py  0004_auto_20210101_1832.py  0005_auto_20210102_2249.py  0006_auto_20210727_2305.py  0006_problemsubmission_ltr_dir.py  0007_comment_ltr_dir.py  0008_auto_20210602_2231.py  0009_auto_20210725_1327.py  0010_auto_20210725_1335.py  0011_auto_20210803_2345.py  0011_remove_problem_publish.py  0012_auto_20210818_1019.py  0012_problem_publish.py  0013_alter_comment_user.py  0014_alter_comment_options_alter_problem_options_and_more.py
problems/templatetags/: style_tags.py
static/css/: main.css
tasks/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_auto_20210808_0724.py  0002_auto_20210815_1116.py  0003_add_level6.py  0004_auto_20220912_1331.py  0005_auto_20220912_1800.py  0006_remove_taskproblemsubmission_correct_alter_task_team.py
templates/admin/: base.html  base_site.html
tests/: admin.py  forms.py  models.py  urls.py  views.py
verify_email/: __init__.py  app_configurations.py  apps.py  confirm.py  email_handler.py  urls.py  views.py
(+62 files in other folders)
