[tool.poetry]
name = "dzmo"
version = "0.1.0"
description = "Website for training algerian students for mathematical olympiads competitions"
authors = ["Abdeldjalil Hezouat <djaloulehez3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.5"
djangorestframework = "^3.14.0"
boto3 = "^1.26.58"
pillow = "^9.4.0"
django-crispy-forms = "^1.14.0"
django-mathfilters = "^1.0.0"
requests = "^2.28.2"
django-redis = "^5.2.0"
django-storages = "^1.13.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
