[project]
name = "dzmo"
version = "0.1.0"
description = "Website for training algerian students for mathematical olympiads competitions"
authors = [{name = "Abdeldjalil Hezouat",email = "djaloulehez3@gmail.com"}]
readme = "README.md"
dependencies = [
    "django>=4.2.3,<5.0.0",
    "gunicorn>=22.0.0,<23.0.0",
    "psycopg2>=2.9.6,<3.0.0",
    "djangorestframework>=3.14.0,<4.0.0",
    "boto3>=1.28.3,<2.0.0",
    "pillow>=9.5.0,<10.0.0",
    "django-crispy-forms>=1.14.0,<2.0.0",
    "django-mathfilters>=1.0.0,<2.0.0",
    "requests>=2.31.0,<3.0.0",
    "django-redis>=5.3.0,<6.0.0",
    "django-storages>=1.13.2,<2.0.0",
]
requires-python = ">=3.12,<4.0"


[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.5",
]

[tool.hatch]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dzmo"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
