[project]
name = "dzmo"
version = "0.1.0"
description = "Website for training algerian students for mathematical olympiads competitions"
authors = [{name = "Abdeldjalil Hezouat",email = "djaloulehez3@gmail.com"}]
readme = "README.md"
dependencies = [
    "django>=4.2.17,<5.0.0",
    "gunicorn>=23.0.0,<24.0.0",
    "psycopg2>=2.9.10,<3.0.0",
    "djangorestframework>=3.15.2,<4.0.0",
    "boto3>=1.35.86,<2.0.0",
    "pillow>=11.0.0,<12.0.0",
    "django-crispy-forms>=1.14.0,<2.0.0",
    "django-mathfilters>=1.0.0,<2.0.0",
    "requests>=2.32.3,<3.0.0",
    "django-redis>=5.4.0,<6.0.0",
    "django-storages>=1.14.4,<2.0.0",
    "django-environ>=0.11.2",
]
requires-python = ">=3.12,<4.0"


[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.8.4",
]

[tool.hatch]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dzmo"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
